--- a/08_events/one.html
+++ b/08_events/one.html
@@ -57,10 +57,19 @@
     // }, false)
 
 
-    document.querySelector('#images').addEventListener('click', function(e){
-        console.log(e.target);
+    document.querySelector('#images').addEventListener
+    ('click', function(e){
+        console.log(e.target.tagName);
+        if (e.target.tagName === 'IMG') {
+            console.log(e.target.id);
+            let removeIt = e.target.parentNode
+            removeIt.remove()
+        }
+   
     })
 
+
+//removeIt.parentNode.remove/child(removeIt)
 </script>
 
 </html>
